# aav

./: README.md
aav_engine/: CMakeLists.txt
aav_engine/aaveng/: CMakeLists.txt  aaveng.cpp  aaveng.h
aav_engine/aavjni/: CMakeLists.txt  aavjni.cpp  aavjni.h  jniUtil.cpp  jniUtil.h  unzipapk.cpp
aav_engine/aavscan/: CMakeLists.txt  aavscan.cpp  aavscan.h  unzipapk.h
aav_engine/cmake/: build.txt  user_config.cmake
aav_engine/cmake/share/llvm/cmake/: LLVMConfig.cmake  LLVMExports.cmake
aav_engine/fileid/: CMakeLists.txt  FileID.cpp  FileID.h  libfileid_export.cpp
aav_engine/fileid/inc/: libfileid_export.h
aav_engine/framework/: CMakeLists.txt  libframework_export.cpp
aav_engine/framework/inc/: libframework_export.h
aav_engine/inc/: AdSig.h  BaseFormat.h  FileSource.h  ICallback.h  IDirBrowser.h  IEngine.h  IFileID.h  IFileMap.h  IFileStream.h  IFileSystem.h  IFileTarget.h  IFramework.h  IMemStream.h  IMemTarget.h  IModule.h  IMultiThreadsEngine.h  IObject.h  IScanObject.h  IScanner.h  ISigMgr.h  IStream.h  ITarget.h  IUnarch.h  IUnpack.h  LoadConfig.h  MemSource.h  ScanObjectProperty.h  ScanOption.h  ScanResult.h  TypeDefine.h
aav_engine/platform/: CMakeLists.txt  libplatform_export.cpp
aav_engine/platform/file/: CMakeLists.txt  DirBrowser.cpp  FileMap.cpp  FileStream.cpp  FileSystem.cpp  FileTarget.cpp
aav_engine/platform/file/inc/: DirBrowser.h  FileMap.h  FileStream.h  FileSystem.h  FileTarget.h
aav_engine/platform/inc/: libplatform_export.h
aav_engine/platform/memory/: CMakeLists.txt  MemStream.cpp  MemTarget.cpp
aav_engine/platform/memory/inc/: MemStream.h  MemTarget.h
aav_engine/platform/module/: CMakeLists.txt  Module.cpp
aav_engine/platform/module/inc/: Module.h
aav_engine/scanner/apk/: ApkScanner.cpp  ApkScanner.h  CMakeLists.txt  libapk_export.cpp
aav_engine/scanner/apk/inc/: libapk_export.h
aav_engine/scanner/dex/: ACMatcher.cpp  ACMatcher.h  AnalysisAssistDexInfo.cpp  CMakeLists.txt  DexCode.cpp  DexCode.h  DexCodeScanResult.cpp  DexCodeScanResult.h  DexCodeScanResultMgr.cpp  DexCodeScanResultMgr.h  DexCodeSigMgr.cpp  DexCodeSigMgr.h  DexFile.cpp  DexFile.h  DexParser.cpp  DexParser.h  DexPathScanResult.cpp  DexPathScanResult.h  DexPathScanResultMgr.cpp  DexPathScanResultMgr.h  DexPathSigMgr.cpp  DexPathSigMgr.h  DexScanner.cpp  DexScanner.h  DexSigMgr.cpp  DexSigMgr.h  dex_format.h  leb128.cpp  leb128.h  libdex_export.cpp  mutf8.cpp  mutf8.h  sunday_matcher.cpp  sunday_matcher.h
aav_engine/scanner/dex/inc/: AnalysisAssistDexInfo.h  DexSig.h  libdex_export.h
aav_engine/sigmgr/: BlowFish.cpp  CMakeLists.txt  CommonDefine.h  Decrypt.cpp  Encrypt.cpp  FileUncompress.cpp  FileUncompress.h  SigMgr.cpp  libsigmgr_export.cpp
aav_engine/sigmgr/inc/: BaseStructure.h  BlowFish.h  MalwareName.h  SigMgr.h  libsigmgr_export.h
aav_engine/unarch/: CMakeLists.txt  libunarch_export.cpp
aav_engine/unarch/inc/: libunarch_export.h
aav_engine/unpack/: CMakeLists.txt  libunpack_export.cpp
aav_engine/unpack/inc/: libunpack_export.h
aav_engine/util/: CMakeLists.txt  libutil_export.cpp
aav_engine/util/crc32/: CMakeLists.txt  FileCRC32.cpp  MemCRC32.cpp  crc32.cpp  crc32.h
aav_engine/util/crc32/inc/: FileCRC32.h  ICRC32.h  IFileCRC32.h  IMemCRC32.h  MemCRC32.h
aav_engine/util/inc/: libutil_export.h
