cmake_minimum_required(VERSION 2.6 FATAL_ERROR)

if (MODULE_BUILD)
    add_subdirectory (framework)
    add_subdirectory (sigmgr)
    add_subdirectory (fileid)
    add_subdirectory (unarch)
    add_subdirectory (unpack)
    add_subdirectory (scanner/apk)
    add_subdirectory (scanner/dex)
    add_subdirectory (platform)
    add_subdirectory (util)
else (MODULE_BUILD)
    add_subdirectory (aaveng)
    add_subdirectory (aavscan)
    if (ANDROID_BUILD)
        add_subdirectory (aavjni)
    endif (ANDROID_BUILD)
endif (MODULE_BUILD)

